# ContextProof

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: contextproof.yml
benchmarks/prompts/context-optimizer/: baseline.md  compactness-first.md  migration-aware.md  validation-first.md
contextproof/: __init__.py  cli.py  core.py
docs/: AGENT_INSTALL_PROMPT.md  CAPABILITY_BOUNDARIES.md  PRODUCT_STRATEGY.md  ROADMAP.md  TODO.md  USAGE_BY_AGENT.md
examples/: benchmark-runs.jsonl
examples/bad-agent-context/: AGENTS.md  README.md
examples/calibration/: cases.jsonl
examples/scenarios/existing-project-conflicting/: README.md  expected.json  notes.md
examples/scenarios/existing-project-overbroad/: README.md  expected.json  notes.md
examples/scenarios/misplaced-general-documentation/: README.md  expected.json  notes.md
examples/scenarios/missing-validation-criteria/: README.md  expected.json  notes.md
examples/scenarios/multi-agent-migration/: README.md  expected.json  notes.md
examples/scenarios/new-project-init-brief/: README.md  expected.json  notes.md
examples/team-agent-context/: AGENTS.md  README.md
schemas/: benchmark-run.schema.json  report.schema.json
scripts/: acceptance_v05.py  acceptance_v06.py  install-contextproof-skill.ps1  install-contextproof-skill.sh
skill/context-proof/: SKILL.md
tests/: test_context_audit.py
(+44 files in other folders)
